Fix settings.scss "z-index" variable to be default

--- a/scss/settings.scss
+++ b/scss/settings.scss
@@ -14,4 +14,4 @@ $grid-order-points: 12 !default;
 
 $heading-font-sizes: (large: (h1: 52px, h2: 42px, h3: 32px, h4: 22px, h5: 16px, h6: 13px), medium: (h1: 42px, h2: 37px, h3: 32px, h4: 17px, h5: 14px, h6: 12px)) !default;
 
-$z-indexes: (modal: 1000)
+$z-indexes: (modal: 1000) !default;
